# indianopenmaps

./: .dockerignore  .gitignore  DATA_LICENSE.md  Dockerfile  README.md  common.js  fly.toml  mosaic_handler.js  package-lock.json  package.json  pmtiles_handler.js  routes.json  server.js  soi_ancillary_routes.js  wikidata_locater.js
.github/: copilot-instructions.md
.github/workflows/: publish_python.yml
data_processing/: create_geoparquet.py  create_parquet_meta.py  fetch_releases.sh  find_unique_fields.py  fix_multi_parquet_files.sh  pick_unique_id.py  update_partitioned_routes.py  upgrade_mosaic.sh
fly-redirect/: fly.toml  nginx.conf
home/: index.html
india_boundary_correcter/: fix_bounds_osm.py  osm_corrections.pmtiles  rels_osm.json  steps.sh
python/: .gitignore  README.md  pyproject.toml
python/iomaps/: cli.py  filter_7z.py  helpers.py  infer_schema.py  pyqt_ui.py  streaming.py  ui.py
python/iomaps/commands/: decorators.py  extract.py  filter_7z.py  infer_schema.py  pyqt_ui.py  schema_common.py  sources.py
python/iomaps/core/: helpers.py  infer_schema.py  spatial_filter.py  streaming_7z.py  writers.py
python/tests/: test_cli.py  test_cli_filter_7z.py  test_cli_filter_7z_advanced.py  test_cli_infer_schema.py
server/: ancillary_routes.js  cog_handler.js  common.js  cors_whitelist.json  errors.js  mosaic_handler.js  pmtiles_handler.js  routes.json  server.js  soi_ancillary_routes.js  stac_catalog.json  stac_handler.js  wikidata_locater.js
server/routes/: cog.js  cors_proxy.js  listing.json  proxy.js  stac.js  static.js  tiles.js
static/: cog-viewer.html  data-help.html  index.html  raster_view.css  raster_view.html  raster_view.js  rasters.html  stac_viewer.html  vectors.html  view.css  view.html  view.js  viewer.html  viewer.js
static/css/: main-dark.css  raster_view.css  view.css
static/js/: base_layer_picker.js  color_handler.js  download_panel_control.js  geocoder_control.js  inspect_control.js  nominatim_geocoder.js  raster_view.js  routes_handler.js  sidebar_control.js  size_getter.js  source_panel_control.js  stac_viewer.js  terrain_handler.js  vector_source_handler.js  viewer.js
utils/: check.py  check_endpoints.js  download_as_mbtiles.py  make_release.py  partition.py  prepare.py  prepare.sh  release_fix.py
worker/: package-lock.json  package.json  wrangler.toml
worker/src/: cog_handler.js  common.js  index.js  mosaic_handler.js  stac_handler.js  tile_maker_photon.js
worker/static/: cog-viewer.html  index.html  (+7 more)
(+40 files in other folders)
